<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_on_secondary"
    android:orientation="vertical"
    android:layoutAnimation="@anim/credits_page_animation">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:paddingBottom="10dp"
        android:text="@string/author_title"
        android:textAlignment="center"
        android:textColor="@color/color_on_primary"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="50dp"
        android:text="@string/author_name"
        android:textAlignment="center"
        android:textColor="@color/color_on_primary"
        android:textSize="@dimen/other_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/prof_title"
        android:textAlignment="center"
        android:textColor="@color/color_on_primary"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="50dp"
        android:text="@string/prof_name"
        android:textAlignment="center"
        android:textColor="@color/color_on_primary"
        android:textSize="@dimen/other_text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/assets_title"
        android:textAlignment="center"
        android:textColor="@color/color_on_primary"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/first_source"
        android:textAlignment="center"
        android:textColor="@color/color_on_primary"
        android:textSize="@dimen/other_text" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/second_source"
        android:textAlignment="center"
        android:textColor="@color/color_on_primary"
        android:textSize="@dimen/other_text" />
</LinearLayout>